--- a/css/styles.css
+++ b/css/styles.css
@@ -129,6 +129,7 @@ body {
     text-decoration: none;
     color: var(--primary-text-color);
     font-family: 'Roboto', sans-serif;
+    position: relative;
  }
 
  .header-item:not(:last-child)
@@ -171,6 +172,7 @@ body {
     width: 16px;
     height: 12px;
     margin-right: 10px;
+    fill: #fffff;
 }
 .header-contact:hover .meil-icon,
 .header-contact:focus .meil-icon {
@@ -180,11 +182,23 @@ body {
     width: 10px;
     height: 16px;
     margin-right: 10px;
+    fill: #fffff;
 }
 
 .header-contact:hover .tel-icon,
 .header-contact:focus .tel-icon {
     fill: var(--accent-color);
+}
+.current::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--accent-color);
+    display: block;
+    bottom: -34px;
+
 }
 /*-----HEADER END-----*/
 
@@ -460,7 +474,7 @@ padding-bottom: 47px;
     text-decoration: none;
     font-family: 'Raleway',
     sans-serif;
-    
+    margin-bottom: 20px;
 
 }
 .part-adress {
