--- a/css/styles.css
+++ b/css/styles.css
@@ -170,11 +170,13 @@ body {
 {
     margin-right: 50px;
 }
+
 .meil-icon{
     width: 16px;
     height: 12px;
     margin-right: 10px;
-    fill: black;
+    fill: #000;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-contact:hover .meil-icon,
 .header-contact:focus .meil-icon {
@@ -184,7 +186,8 @@ body {
     width: 10px;
     height: 16px;
     margin-right: 10px;
-    fill: black;
+    fill: #000;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-contact:hover .tel-icon,
@@ -461,6 +464,7 @@ padding-bottom: 47px;
     border-radius: 4px;
     align-items: center;
     justify-content: center;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .client-item+.client-item{
     margin-left: 30px;
@@ -474,6 +478,12 @@ padding-bottom: 47px;
 .client-link:hover .client-icon,
 .client-link:focus .client-icon {
     fill: var(--color-btn);
+   
+}
+.client-link:hover,
+.client-link:focus {
+    border: 1px solid var(--accent-color);
+    
 }
 /*-----FOOTER-----*/
 
